fixed alignment of footer

--- a/src/styles.css
+++ b/src/styles.css
@@ -46,7 +46,7 @@ hr {
   padding: 25px 50px;
   background-color: white;
   border-radius: 20px;
-  width: fit-content;
+  max-width: 600px;
 }
 
 .search-input {
